# fractions

./: .gitignore  README.md  setup.cfg
src/fractions_math/: add.py  test_example.py
src/fractions_pkg_jmasonlee.egg-info/: PKG-INFO  SOURCES.txt  top_level.txt
tests/: test_add.py  test_reduce.py
