[metadata]
name = fractions-pkg-jmasonlee
version = 0.0.2
author = Jacqueline Bilston
author_email = foo@foo.com
description = A small fraction math package
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/jmasonlee/WBITDD-fractions
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src

